# toka-assessment

./: .env.example  .gitignore  README.md  docker-compose.yml
app/: Dockerfile  components.json  jest.config.cjs  nginx.conf  package-lock.json  package.json  tsconfig.test.json
docs/: architecture.md  ddd-clean-architecture.md  docker-compose-design.md  performance-under-pressure.md  prompt-engineering.md  (+1 more)
kong/: kong.yml
services/ai/: .dockerignore  Dockerfile  evaluate_responses.py  main.py  pyproject.toml
services/ai/app/application/ports/: auth.py  cursor_store.py  embeddings.py  event_bus.py  sources.py  vector_store.py
services/ai/app/application/use_cases/: ingest_embeddings.py  query_agent.py
services/ai/app/core/: config.py  logging.py
services/ai/app/domain/: cursor.py  document.py  source.py
services/ai/app/infrastructure/auth/: __init__.py  jwt_verifier.py
services/ai/app/infrastructure/chroma/: __init__.py  client.py  cursor_store.py  vector_store.py
services/ai/app/infrastructure/http/: service_clients.py
services/ai/app/infrastructure/openai/: __init__.py  client.py
services/ai/app/infrastructure/rabbitmq/: event_bus.py
services/ai/app/presentation/: api.py  dependencies.py  schemas.py
services/ai/tests/application/: test_ingest_embeddings.py  test_query_agent.py
services/ai/tests/core/: test_config.py  test_logging.py
services/ai/tests/infrastructure/: test_chroma.py  test_event_bus.py  test_jwt_verifier.py  test_openai_client.py  test_service_clients.py
services/ai/tests/presentation/: test_api.py  test_dependencies.py
(+289 files in other folders)
