[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "chromadb>=1.1.0",
    "httpx>=0.28.1",
    "openai>=1.108.0",
    "pyjwt[crypto]>=2.10.1",
    "pika>=1.3.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
